--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </form>
       </section>
       <div class="map-container">
-        <div id="map" class="map" width="1200" height="473"></div>
+        <div id="map" class="map"></div>
       </div>
     </main>
     <footer class="main-footer">
