--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </section>
       <section class="interesting">
         <h2 class="interesting__header">Заинтересовались?</h2>
-        <p class="interesting__content">Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
+        <p class="interesting__content">Укажите предполагаемые даты поездки,<br>и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в&nbsp;Седоне</p>
         <button class="interesting__search" type="button">Поиск гостиницы в Седоне</button>
         <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
           <!-- Здесь будет форма поиска -->
