--- a/hotels.html
+++ b/hotels.html
@@ -134,7 +134,8 @@
       <section class="footer-item-container">
         <h2 class="visually-hidden">Контакты.</h2>
         <p class="contacts">
-          <a class="contacts__link" href="#">#visitSEDONA</a><br> ТЕЛ: <a class="contacts__link" href="tel:+74956660166">+7 (495) 666-01-66</a>
+          <a class="contacts__link" href="#">#visitSEDONA</a>
+          <a class="contacts__link" href="tel:+74956660166">ТЕЛ: +7 (495) 666-01-66</a>
         </p>
       </section>
       <section class="footer-item-container">
