--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
           </p>
           <button class="search-form__find" type="submit">Найти</button>
         </form>
-        <div class="map-container">
-          <div id="map" class="map"></div>
+        <div id="map" class="map">
         </div>
       </div>
 
@@ -146,7 +145,8 @@
       <section class="footer-item-container">
         <h2 class="visually-hidden">Контакты.</h2>
         <p class="contacts">
-          <a class="contacts__link" href="#">#visitSEDONA</a><br> ТЕЛ: <a class="contacts__link" href="tel:+74956660166">+7 (495) 666-01-66</a>
+          <a class="contacts__link" href="#">#visitSEDONA</a>
+          <a class="contacts__link" href="tel:+74956660166">ТЕЛ: +7 (495) 666-01-66</a>
         </p>
       </section>
       <section class="footer-item-container">
@@ -185,7 +185,7 @@
     </footer>
   </div>
   <script src="js/script.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDVO0jnpeT5nMOzS9LEG1srk2lchp4LMug&callback=mainMap" async defer></script>
+  <script src="https://maps.googleapis1.com/maps/api/js?key=AIzaSyDVO0jnpeT5nMOzS9LEG1srk2lchp4LMug&callback=mainMap" async defer></script>
 </body>
 
 </html>
