--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="item-container">
               <h3 class="item-header">Настоящий городок</h3>
               <p class="item-number">— №1 —</p>
-              <p class="item-content">Седона&nbsp;&mdash; не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
+              <p class="item-content">Седона&nbsp;- не&nbsp;аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <ul class="city-useful-list">
               <li class="city-useful-list__item city-useful-list__item--home">
@@ -59,7 +59,7 @@
           </li>
           <li class="reasons-list__item reasons-list__item--right">
             <div class="item-container">
-              <h3 class="item-header">Там есть Мост дьявола</h3>
+              <h3 class="item-header">Там есть Мост&nbsp;дьявола</h3>
               <p class="item-number">— №2 —</p>
               <p class="item-content">Да, по&nbsp;нему можно пройти! Если конечно вы&nbsp;осмелитесь</p>
             </div>
